[package]
name = "bujang-bujang-bot"
version = "0.1.0"
authors = ["Naufal Fikri <nauffik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.0.1"
reqwest = { version = "^0.11.0", features = [ "blocking", "json" ] }
clokwerk = "^0.3.4"
chrono = "0.4"
chrono-tz = "0.5"
serde = "^1.0"
serde_json = "^1.0"